@@ -1,5 +1,10 @@
 2013-11-21  Jan Tatarik <jan.tatarik@gmail.com>
 
+	* gnus-icalendar.el (gnus-icalendar-additional-identities): New.
+	(gnus-icalendar-identities): Support additional-identities.
+
+2013-11-21  Jan Tatarik <jan.tatarik@gmail.com>
+
 	* gnus-icalendar.el (gnus-icalendar-event:org-timestamp): Fix
 	org-timestamp for events ending at midnight.
 
